plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.10'
    id 'org.beryx.jlink' version '2.24.1'
}

group 'eu.kwr-hannover.jufo'
version '2023.2.0'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.2'
}



tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'eu.kwrhannover.jufo.alethieg'
    mainClass = 'eu.kwrhannover.jufo.alethieg.AlethieG'
}


dependencies {
    implementation 'colt:colt:1.2.0'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/${name}-${version}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
}

jlinkZip {
    group = 'distribution'
}

compileJava {
    options.release = 10
}